--- a/datepicker.css
+++ b/datepicker.css
@@ -13,7 +13,8 @@
     width: 245px;
     height: 28px;
     padding-left: 6px;
-    border: 1px solid #DDD; }
+    border: 1px solid #DDD;
+    outline: none; }
   .vue-datepicker .vue-datepicker-panel {
     position: absolute;
     z-index: 99999;
@@ -38,20 +39,20 @@
         color: #999;
         font-size: 12px; }
         .vue-datepicker .vue-datepicker-panel .vue-datepicker-month a:hover {
-          background-color: #F5F5F5; }
+          background-color: #F5F6F7; }
       .vue-datepicker .vue-datepicker-panel .vue-datepicker-month span {
         float: left;
         display: block;
         width: 175px; }
         .vue-datepicker .vue-datepicker-panel .vue-datepicker-month span.vue-datepicker-btn:hover {
-          background-color: #F5F5F5;
+          background-color: #F5F6F7;
           cursor: pointer; }
     .vue-datepicker .vue-datepicker-panel .vue-datepicker-tb, .vue-datepicker .vue-datepicker-panel .vue-datepicker-tb2 {
       width: 245px;
       border-collapse: collapse;
       text-align: center; }
       .vue-datepicker .vue-datepicker-panel .vue-datepicker-tb thead, .vue-datepicker .vue-datepicker-panel .vue-datepicker-tb2 thead {
-        background-color: #F5F5F5;
+        background-color: #F5F6F7;
         height: 35px;
         line-height: 35px;
         border-top: 1px solid #DDD;
@@ -71,10 +72,10 @@
             cursor: pointer; }
             .vue-datepicker .vue-datepicker-panel .vue-datepicker-tb tbody tr td.z-existed span, .vue-datepicker .vue-datepicker-panel .vue-datepicker-tb2 tbody tr td.z-existed span {
               display: block;
-              height: 22.75px;
-              line-height: 22.75px; }
+              height: 21.7px;
+              line-height: 21.7px; }
             .vue-datepicker .vue-datepicker-panel .vue-datepicker-tb tbody tr td.z-existed:hover, .vue-datepicker .vue-datepicker-panel .vue-datepicker-tb2 tbody tr td.z-existed:hover {
-              background-color: #F5F5F5;
+              background-color: #F5F6F7;
               color: #d0000e; }
             .vue-datepicker .vue-datepicker-panel .vue-datepicker-tb tbody tr td.z-existed.z-on span, .vue-datepicker .vue-datepicker-panel .vue-datepicker-tb2 tbody tr td.z-existed.z-on span {
               color: #FFF;
